--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,11 @@ h2, h3, h4, h5, h6 {
     font-weight: 300;
 }
 
+#loading {
+   text-align: center;
+}
+
+
 p, li {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 14px;
